--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-if": "^2.0.2",
+    "gulp-if-env": "^0.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0"
   }
