--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Ellie's Alphabet",
-  "short_name": "Ellie's Alphabet",
+  "short_name": "Ellie's",
   "start_url": "index.html",
   "display": "standalone",
   "theme_color": "#6b8e23",
